[package]
name = "karu-tokyo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "karu-tokyo-server"
path = "src/main.rs"

[dependencies]
poem = "3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
